@@ -28,6 +28,8 @@ apt (0.9.7.8) UNRELEASED; urgency=low
       (LP: #1086997)
     - quote plus in filenames to work around a bug in the S3 server
       (LP: #1003633)
+  * apt-pkg/indexrecords.cc:
+    - support '\r' in the Release file
 
  -- Christian Perrier <bubulle@debian.org>  Mon, 24 Dec 2012 07:01:20 +0100
 
